@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200323"
-#define public MagickPackageReleaseDate "snapshot-20200323"
+#define public MagickPackageVersionAddendum ".020200324"
+#define public MagickPackageReleaseDate "snapshot-20200324"
