@@ -1,3 +1,8 @@
+2020-03-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/log.c (InitializeLogInfoPost): Mark that logging is
+	configured, regardless of if "log.mgk" was discovered.
+
 2020-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* VisualMagick/magick/magick_config.h.in: ProvideDllMain is now
